<resources>
    <!-- Common -->

    <string name="app_name">BTS Тест</string>

    <string name="cancel">Отмена</string>

    <string name="confirm">Подтвердить</string>

    <string name="great">Отлично</string>

    <string name="back">Назад</string>

    <string name="icon_coins_content_description">Монеты</string>

    <string name="close_dialog_content_description">Закрытие диалога</string>

    <string name="play">Играть</string>

    <string name="to_level_selection">К выбору уровня</string>

    <string name="loading_ad_title">Загрузка</string>
    <string name="loading_ad">Загружаем рекламу…\nПожалуйста, не закрывайте диалог</string>

    <string name="failed_to_load_rewarded_ad_title">Ошибка</string>
    <string name="failed_to_load_rewarded_ad">Не удалось загрузить рекламу</string>

    <!-- MainActivity -->

    <string name="settings">Настройки</string>

    <!-- Introduction -->

    <string name="introduction_card_1_title">Добро пожаловать</string>
    <string name="introduction_card_1_text">Приветствуем вас в нашей викторине о BTS!\nДавайте кратко пройдёмся по основным аспектам игры.</string>

    <string name="introduction_card_2_title">Уровни сложности</string>
    <string name="introduction_card_2_text">Вопросы разделены на 7 уровней сложности.\nПройденные вопросы будут сохраняться в отдельном уровне.</string>

    <string name="introduction_card_3_title">Монеты</string>
    <string name="introduction_card_3_text">За правильные ответы вы будете получать монеты, которые начисляются после окончания теста.\nС их помощью можно открывать уровни и использовать подсказки.</string>

    <string name="introduction_card_4_title">Удобный формат</string>
    <string name="introduction_card_4_text">Обычно тест состоит из 6 вопросов выбранного уровня сложности.\nИ не переживайте, если вы неправильно ответите на вопрос, то обязательно встретите его снова!</string>

    <string name="next">Далее</string>

    <!-- Settings -->

    <string name="without_quiz_hints">Без подсказок</string>
    <string name="reset_progress">Сбросить прогресс</string>

    <string name="share_app">Поделиться приложением</string>
    <string name="for_sharing_result">Смотри! Мной было пройдено %1$d вопросов! А сколько сможешь ты?</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.justcircleprod.btsquiz</string>

    <string name="developers_and_licenses">Разработчики и лицензии</string>

    <string name="copyright_disclaimer">Copyright Disclaimer</string>
    <string name="copyright_disclaimer_text">
        This is NOT an official app of BTS or their labels.\n
        This app is for entertainment purposes only.\n
        The content is not produced by, or affiliated with, the music artist(s) or any related organization(s).\n
        All trademarks, images, audio and video in this app are the property of their respective owners.\n
        Any infringement is unintentional, and you may notify us if you ever find one.
    </string>

    <string name="rate_app">Оценить приложение</string>

    <string name="developers">Разработчики</string>
    <string name="developers_content_description">JustCircle Prod.</string>
    <string name="licenses">Лицензии</string>

    <!-- Reset Progress -->

    <string name="reset_progress_dialog_title">Сброс прогресса</string>
    <string name="reset_confirmation_question">Вы действительно хотите сбросить ваш прогресс?</string>
    <string name="reset">Сбросить</string>

    <string name="progress_was_reset_dialog_title">Прогресс сброшен</string>
    <string name="progress_was_reset">Прогресс успешно сброшен</string>

    <!-- Levels -->

    <string name="loading_levels">Загрузка…</string>

    <string name="levels_users_coins_quantity">У вас %1$d</string>

    <string name="passed_questions_level_name">Пройденные вопросы</string>
    <string name="level_1_name">Уровень 1</string>
    <string name="level_2_name">Уровень 2</string>
    <string name="level_3_name">Уровень 3</string>
    <string name="level_4_name">Уровень 4</string>
    <string name="level_5_name">Уровень 5</string>
    <string name="level_6_name">Уровень 6</string>
    <string name="level_7_name">Уровень 7</string>
    <string name="level_progress">%1$d/%2$d</string>

    <string name="locked_level_icon_content_description">Закрытый уровень</string>

    <string name="open_for_n_coins">Открыть за %1$d</string>

    <!-- Compensation received -->

    <string name="receiving_coins">Начисление монет</string>
    <string name="compensation_received_text">Мы выпустили крупное обновление, которое принесло с собой монеты и многое другое.\nСпасибо за то, что продолжаете проводить время в нашей игре!</string>
    <string name="compensation_size_text">Вам было начислено</string>

    <!-- Unlock Level -->

    <string name="unlock_level_dialog_title">Открытие уровня</string>

    <string name="unlock_level_confirmation">Вы уверены, что хотите открыть этот уровень?</string>
    <string name="unlock">Открыть</string>

    <!-- Watch Rewarded Ad -->

    <string name="not_enough_coins_title">Недостаточно монет</string>

    <string name="watch_ad">Посмотреть</string>

    <string name="you_dont_have_enough_coins">Вам не хватает</string>
    <string name="do_you_want_to_watch_an_ad_to_get_coins">Хотите посмотреть рекламу, чтобы получить награду?</string>

    <string name="reward_received_title">Награда начислена</string>
    <string name="reward_received">Вам начислено</string>

    <!-- Quiz -->

    <string name="tv_loading_questions_text">Подготавливаем самые интересные вопросы…</string>

    <string name="tv_out_of_questions_hint_text">Похоже, что вы ответили на все вопросы этого уровня!\nВы можете снова ответить на них на уровне \"Пройденные вопросы\".</string>

    <string name="quiz_question_worth_label">За вопрос: %1$d</string>
    <string name="quiz_users_coins_quantity">У вас: %1$d</string>

    <string name="image_for_question_description">Вопрос с изображением</string>
    <string name="video_for_question_description">Вопрос с видео</string>
    <string name="audio_question_content_description">Аудио вопрос</string>

    <string name="hints">Подсказки</string>
    <string name="remove_2_options">Убрать 2 варианта</string>
    <string name="right_answer">Правильный ответ</string>

    <!-- Quiz Result -->

    <string name="tv_loading_result_text">Подсчитываем монеты…</string>

    <string name="you_got">Вы получили</string>

    <string-array name="texts_for_bad_result">
        <item>Мы в тебя верим!</item>
        <item>Ты сможешь!</item>
        <item>Верь в себя!</item>
        <item>В следующий раз получится!</item>
        <item>Не сдавайся!</item>
    </string-array>

    <string-array name="texts_for_good_result">
        <item>Отлично получается!</item>
        <item>Ты молодец!</item>
        <item>Не сдавайся!</item>
    </string-array>

    <string-array name="texts_for_best_result">
        <item>Ура!</item>
        <item>Поздравляем!</item>
        <item>Ты молодец!</item>
        <item>Мы не сомневались!</item>
    </string-array>

    <string name="continue_quiz">Продолжить прохождение</string>

    <!-- Double Coins  -->

    <string name="double_coins">Удвоить монеты</string>
    <string name="do_you_want_to_watch_an_ad_to_double_coins">Хотите посмотреть рекламу, чтобы удвоить полученные монеты?</string>
    <string name="double_coins_quantity_with_placeholder">%1$d x 2</string>

    <string name="coins_doubled_title">Монеты удвоены</string>
    <string name="coins_doubled">Полученные монеты были удвоены</string>
</resources>