<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/dialog_background"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_progress_dialog_title"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/dialog_title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_dialog_content_description"
            android:src="@drawable/icon_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_title_layout_bottom_margin"
        android:gravity="center"
        android:text="@string/reset_confirmation_question"
        android:textAlignment="center"
        android:textColor="@color/gray_text_color"
        android:textSize="@dimen/dialog_hint_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_progress_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_buttons_layout_top_margin"
        android:backgroundTint="@color/second_btn_color"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/button_padding"
        android:stateListAnimator="@null"
        android:text="@string/reset_progress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/second_btn_text_color"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/ripple_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_progress_was_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_buttons_layout_top_margin"
        android:backgroundTint="@color/second_btn_color"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/button_padding"
        android:stateListAnimator="@null"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/second_btn_text_color"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/ripple_color" />

</LinearLayout>